# poetry2nix-py2

./: README.md  shell.nix
broken/: default.nix  pyproject.toml
nix/: pkgs.nix  sources.json
working/: pyproject.toml
