[tool.poetry]
name = "broken"
version = "0.1.0"
description = ""
authors = ["Jamey Sharp <jamey@minilop.net>"]
license = "MIT"

[tool.poetry.scripts]
hello = 'broken:run'

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
