[tool.poetry]
name = "working"
version = "0.1.0"
description = ""
authors = ["Jamey Sharp <jamey@minilop.net>"]
license = "MIT"

[tool.poetry.scripts]
hello = 'working:run'

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
importlib-metadata = {version = "^1.7.0", python = "~2.7 || >=3.5, <3.8"}
enum34 = {version = "^1.1.10", python = "~2.7"}
functools32 = {version = "^3.2.3-2", python = "~2.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
